--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-assets/*
-!assets/.gitignore
-protected/runtime/*
-!protected/runtime/.gitignore
-protected/data/*.db
-themes/classic/views/
+composer.lock
+composer.phar
+/vendor
+.idea/
