--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,13 @@
   "keywords": ["smartsheet"],
   "license": "MIT",
   "require": {
-    "php": ">=5.4.0",
-    "guzzlehttp/guzzle": "^5.3.1",
-    "guzzlehttp/guzzle-services": "*",
-    "guzzlehttp/retry-subscriber": "*",
-    "guzzlehttp/log-subscriber": "*"
+    "php": ">=7.2.0",
+    "guzzlehttp/guzzle-services": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "ext-json": "*",
+    "phpunit/phpunit": "~4.0",
+    "roave/security-advisories": "dev-master"
   },
   "authors": [
     {
